--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "firebase": "^5.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-materialize": "^2.4.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
