--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,13 @@
     "firebase": "^5.5.1",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-bootstrap-typeahead": "^3.2.4",
     "react-dom": "^16.5.2",
     "react-materialize": "^2.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-select": "^2.1.0",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2"
   },
