--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-select": "^2.1.0",
+    "react-toastify": "^4.4.0",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2"
   },
