--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-select": "^2.1.0",
     "react-toastify": "^4.4.0",
     "redux": "^4.0.1",
-    "redux-form": "^7.4.2"
+    "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
