--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "1.1.5",
     "react-select": "^2.1.0",
     "react-toastify": "^4.4.0",
+    "react-youtube": "^7.8.0",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
