--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-select": "^2.1.0",
     "react-toastify": "^4.4.0",
     "react-youtube": "^7.8.0",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
