--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-select": "^2.1.0",
+    "react-simple-maps": "^0.12.1",
     "react-toastify": "^4.4.0",
     "react-youtube": "^7.8.0",
     "reactstrap": "^6.5.0",
